--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(main main.cpp)
-add_compile_options(main PRIVATE -Wall -Wextra -pthread -O2)
+if(MSVC)
+    target_compile_options(main PRIVATE /W4 /O2)
+else()
+    target_compile_options(main PRIVATE -Wall -Wextra -pthread -O2)
+endif()
